ZOOKEEPER-134 findbugs cleanup
git-svn-id: https://svn.apache.org/repos/asf/hadoop/zookeeper/trunk@692164 13f79535-47bb-0310-9956-ffa450edef68